@@ -1,11 +1,13 @@
 1.1.3, 2011/09/15
 =================
 
-- fix https://github.com/numericube/twistranet/issues/27
+- Fix https://github.com/numericube/twistranet/issues/27
  (submit comment button disappears after a wall reload)
 
-- fix https://github.com/numericube/twistranet/issues/31
+- Fix https://github.com/numericube/twistranet/issues/31
   (stop walls reload when a comment form is not empty)
+
+- Do not erase comment text field when clicking on "show all comments"
 
 1.1.2, 2011/08/30
 =================
